# modular-vae-demo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: smoke-test.yml
assets/results/: mnist_beta_vae_eval.yaml  mnist_cnn_standard_eval.yaml  mnist_flow_prior_eval.yaml  mnist_mlp_standard_eval.yaml  mnist_transformer_standard_eval.yaml
docs/: elbo.md  flow_prior.md  reparameterization.md  vae_overview.md
scripts/: run_all_experiments.sh  smoke_test.py
